# RealTimeStreaming

./: README.md  TA anim.excalidraw  Technical Architecture.excalidraw  pyproject.toml
services/Kusto/: Add Permission.py  main.py  pyproject.toml
services/consumer/: main v1.py  main.py  pyproject.toml
services/consumer/config/: config.py  settings.env
services/producer/: kraken_websocket_api.py  main.py  pyproject.toml  trade.py
services/producer/Config/: Config.py  settings.env
state_data/cg_d5295146-9903-4e48-afeb-9199fcaaff23/hopping_window_120000_60000/es_06be308f-5097-49ac-bbe9-8a3e735e37ad/0/: IDENTITY  LOG  LOG.old.1746462197806366  MANIFEST-000023
state_data/cg_d5295146-9903-4e48-afeb-9199fcaaff23/hopping_window_120000_60000/es_06be308f-5097-49ac-bbe9-8a3e735e37ad/1/: IDENTITY  LOG  LOG.old.1746462197825503  MANIFEST-000023
state_data/cg_d5295146-9903-4e48-afeb-9199fcaaff23/hopping_window_120000_60000/es_06be308f-5097-49ac-bbe9-8a3e735e37ad/2/: IDENTITY  LOG  LOG.old.1746462197840940  MANIFEST-000023
state_data/cg_d5295146-9903-4e48-afeb-9199fcaaff23/hopping_window_120000_60000/es_06be308f-5097-49ac-bbe9-8a3e735e37ad/3/: IDENTITY  LOG  LOG.old.1746462197855792  MANIFEST-000023
state_data/cg_d5295146-9903-4e48-afeb-9199fcaaff23/hopping_window_300000_60000/es_06be308f-5097-49ac-bbe9-8a3e735e37ad/0/: IDENTITY  LOG  MANIFEST-000005
state_data/cg_d5295146-9903-4e48-afeb-9199fcaaff23/hopping_window_300000_60000/es_06be308f-5097-49ac-bbe9-8a3e735e37ad/1/: IDENTITY  LOG  MANIFEST-000005
(+50 files in other folders)
