[project]
name = "realtimestreaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "kafka>=1.3.5",
    "kafka-python>=2.2.1",
    "loguru>=0.7.3",
    "quixstreams>=3.13.1",
    "typing>=3.10.0.0",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
]

[tool.uv.workspace]
members = [
    "services/producer",
]
